@@ -189,7 +189,7 @@ class ValidateButtonTest {
     private HtmlButton getValidateButton(HtmlPage page) {
         DomNodeList<HtmlElement> buttons = page.getElementById("test-panel").getElementsByTagName("button");
         assertEquals(1, buttons.size());
-        return (HtmlButton) buttons.get(0);
+        return (HtmlButton) buttons.getFirst();
     }
 
     @TestExtension("noInjectionArePossible")
